garde/tests/ui/compile-fail/matches_unknown_field.rs
#![allow(dead_code)]

#[derive(garde::Validate)]
struct Test<'a> {
    #[garde(matches(foo))]
    bar: &'a str,
}

fn main() {}
